objects/Overtime_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Year__c</fullName>
        <defaultValue>&quot;2021&quot;</defaultValue>
        <label>Effective Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2021</fullName>
                    <default>true</default>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro Name</label>
        <referenceTo>Pro_User_Access_Form__c</referenceTo>
        <relationshipLabel>Overtime Requests</relationshipLabel>
        <relationshipName>Overtime_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Week_Of__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday, August 1, 2021</fullName>
                </value>
                <value>
                    <fullName>Monday, August 2, 2021</fullName>
                </value>
                <value>
                    <fullName>Tuesday, August 3, 2021</fullName>
                </value>
                <value>
                    <fullName>Wednesday, August 4, 2021</fullName>
                </value>
                <value>
                    <fullName>Thursday, August 5, 2021</fullName>
                </value>
                <value>
                    <fullName>Friday, August 6, 2021</fullName>
                </value>
                <value>
                    <fullName>Saturday, August 7, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 8, 2021</fullName>
                </value>
                <value>
                    <fullName>Monday, August 9, 2021</fullName>
                </value>
                <value>
                    <fullName>Tuesday, August 10, 2021</fullName>
                </value>
                <value>
                    <fullName>Wednesday, August 11, 2021</fullName>
                </value>
                <value>
                    <fullName>Thursday, August 12, 2021</fullName>
                </value>
                <value>
                    <fullName>Friday, August 13, 2021</fullName>
                </value>
                <value>
                    <fullName>Saturday, August 14, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 15, 2021</fullName>
                </value>
                <value>
                    <fullName>Monday, August 16, 2021</fullName>
                </value>
                <value>
                    <fullName>Tuesday, August 17, 2021</fullName>
                </value>
                <value>
                    <fullName>Wednesday, August 18, 2021</fullName>
                </value>
                <value>
                    <fullName>Thursday, August 19, 2021</fullName>
                </value>
                <value>
                    <fullName>Friday, August 20, 2021</fullName>
                </value>
                <value>
                    <fullName>Saturday, August 21, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 22, 2021</fullName>
                </value>
                <value>
                    <fullName>Monday, August 23, 2021</fullName>
                </value>
                <value>
                    <fullName>Tuesday, August 24, 2021</fullName>
                </value>
                <value>
                    <fullName>Wednesday, August 25, 2021</fullName>
                </value>
                <value>
                    <fullName>Thursday, August 26, 2021</fullName>
                </value>
                <value>
                    <fullName>Friday, August 27, 2021</fullName>
                </value>
                <value>
                    <fullName>Saturday, August 28, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 29, 2021</fullName>
                </value>
                <value>
                    <fullName>Monday, August 30, 2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extend Shift 1 Hour</fullName>
                </value>
                <value>
                    <fullName>Extend Shift 2 Hours</fullName>
                </value>
                <value>
                    <fullName>Work On Day Off</fullName>
                </value>
                <value>
                    <fullName>DAY OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Overtime_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Of__c</fullName>
        <label>Week Of</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Effective_Year__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday, August 1, 2021 - Saturday, August 7, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 15, 2021 - Saturday, August 21, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 29, 2021 - Saturday, September 4, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 8, 2021 - Saturday, August 14, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, December 19, 2021 - Sunday, December 26, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, December 5, 2021 - Sunday, December 12, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, February 13, 2022 - Sunday, February 20, 2022</fullName>
                </value>
                <value>
                    <fullName>Sunday, February 27, 2022 - Sunday, March 6, 2022</fullName>
                </value>
                <value>
                    <fullName>Sunday, January 16, 2022 - Sunday, January 23, 2022</fullName>
                </value>
                <value>
                    <fullName>Sunday, January 2, 2022 - Sunday, January 9, 2022</fullName>
                </value>
                <value>
                    <fullName>Sunday, January 30, 2022 - Sunday, February 6, 2022</fullName>
                </value>
                <value>
                    <fullName>Sunday, March 13, 2022	- Sunday, March 20, 2022</fullName>
                </value>
                <value>
                    <fullName>Sunday, November 14, 2021	-	Saturday, November 20, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, November 7, 2021	-	Saturday, November 13, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, October 10, 2021	-	Saturday, October 16, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, October 24, 2021	-	Saturday, October 30, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, September 26, 2021 - Sunday, October 3, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, August 22, 2021 - Saturday, August 28, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, September 5, 2021 - Saturday, September 11, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, September 12, 2021 - Saturday, September 18, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, September 19, 2021 - Saturday, September 25, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, September 26, 2021 - Saturday, October 2, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, October 3, 2021 - Saturday, October 9, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, October 17, 2021 - Saturday, October 23, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, October 31, 2021 - Saturday, November 6, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, November 21, 2021 - Saturday, November 27, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, November 28, 2021 - Saturday, December 4, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, December 5, 2021 - Saturday, December 11, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, December 12, 2021 - Saturday, December 18, 2021</fullName>
                </value>
                <value>
                    <fullName>Sunday, December 19, 2021 - Saturday, December 25, 2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Overtime Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Week_Of__c</columns>
        <columns>Request_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OT-{0}</displayFormat>
        <label>Overtime Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overtime Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>